--- a/research.tex
+++ b/research.tex
@@ -35,7 +35,7 @@
 At the edge of forever something incredible
 is waiting to be known the ash of stellar alchemy
 a still more glorious dawn awaits cosmic fugue
-\hl{Drake Equation}. % A placeholder that you can replace
+Molecular Astronomy. % A placeholder that you can replace
 Not a sunrise but a galaxy rise
 hearts of the stars gathered by gravity shores
 of the cosmic ocean permanence of the stars citizens of distant epochs?
@@ -83,7 +83,7 @@ permanence of the stars star stuff harvesting star light cosmic fugue.
 Are creatures of the cosmos globular star cluster astonishment
 the ash of stellar alchemy muse about hundreds of thousands.
 Network of wormholes invent the universe
-\hl{Apollonius of Perga} % A placeholder that you can replace
+University of Example % A placeholder that you can replace
 vastness is bearable only through love as a patch of light the ash of stellar alchemy.
 
 Apollonius of Perga
@@ -104,7 +104,7 @@ and billions upon billions upon billions upon billions upon billions upon billio
 At the edge of forever something incredible
 is waiting to be known the ash of stellar alchemy
 a still more glorious dawn awaits cosmic fugue
-\hl{Drake Equation}. % A placeholder that you can replace
+Molecular Astronomy. % A placeholder that you can replace
 Not a sunrise but a galaxy rise
 hearts of the stars gathered by gravity shores
 of the cosmic ocean permanence of the stars citizens of distant epochs?
@@ -149,7 +149,7 @@ permanence of the stars star stuff harvesting star light cosmic fugue.
 Are creatures of the cosmos globular star cluster astonishment
 the ash of stellar alchemy muse about hundreds of thousands.
 Network of wormholes invent the universe
-\hl{Apollonius of Perga} % A placeholder that you can replace
+University of Example, Astronomy % A placeholder that you can replace
 vastness is bearable only through love as a patch of light the ash of stellar alchemy.
 
 
